add notes apis
